--- a/02_show.html
+++ b/02_show.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/02_show.css" rel="stylesheet" type="text/css">
-    <script src="js/00_index.js"></script>
+    <script src="js/theater.js"></script>
 
 
 </head>
@@ -66,7 +66,7 @@
             </ul>
         </section>
 
-        <a href="#"><h2>P-ARCHIVE</h2></a>
+        <h2><a href="#">P-ARCHIVE</a></h2>
 
         <section class="c_04">
             <div>
@@ -79,15 +79,15 @@
                 <div>
                     <h4>contact</h4>
                     <p> T : 02-744-0015
-                        parangsae.theater@00ground.kr
+                        <a href="#">parangsae.theater@00ground.kr</a>
                     </p>
                 </div>
 
                 <div>
                     <h4>address</h4>
-                    <p> 서울특별시 종로구
-                        대학로 116 B2F
-                        파랑새극장</p>
+                    <p><a href="#">서울특별시 종로구
+                                   대학로 116 B2F
+                                   파랑새극장</a></p>
                 </div>
 
                 <div>
