--- a/03_venue.html
+++ b/03_venue.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/03_venue.css" rel="stylesheet" type="text/css">
-    <script src="js/00_index.js"></script>
+    <script src="js/theater.js"></script>
 
 
 </head>
@@ -70,9 +70,10 @@
             <div class="process">
                 <div>
                     <img src="img/3_img_01.png">
-                    <!-- <video autoplay loop muted controls>
-                        <source src="#">
-                    </video> -->
+<!--
+                    <video autoplay loop muted controls>
+                        <source src="#" type="video/mp4"> </video>
+-->
                 </div>
 
                 <article>
@@ -193,26 +194,26 @@
                 </div>
 
                 <article class="contact">
-                    <div>
-                        <h4>contact</h4>
-                        <p> T : 02-744-0015
-                            parangsae.theater@00ground.kr
-                        </p>
-                    </div>
+                <div>
+                    <h4>contact</h4>
+                    <p> T : 02-744-0015
+                        <a href="#">parangsae.theater@00ground.kr</a>
+                    </p>
+                </div>
 
-                    <div>
-                        <h4>address</h4>
-                        <p> 서울특별시 종로구
-                            대학로 116 B2F
-                            파랑새극장</p>
-                    </div>
+                <div>
+                    <h4>address</h4>
+                    <p><a href="#">서울특별시 종로구
+                                   대학로 116 B2F
+                                   파랑새극장</a></p>
+                </div>
 
-                    <div>
-                        <h4>on the web</h4>
-                        <a href="#">Instagram</a>
-                        <a href="#">00ground</a>
-                    </div>
-                </article>
+                <div>
+                    <h4>on the web</h4>
+                    <a href="#">Instagram</a>
+                    <a href="#">00ground</a>
+                </div>
+            </article>
             </section>
         </div>
 
@@ -222,6 +223,4 @@
         <p>공공그라운드 사업자 등록번호: 719-85-00611 대표이사: 배수현 Tel : 02-744-0015</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
