--- a/04_stage.html
+++ b/04_stage.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/04_stage.css" rel="stylesheet" type="text/css">
-    <script src="js/00_index.js"></script>
+    <script src="js/theater.js"></script>
 
 </head>
 
@@ -48,15 +48,15 @@
         </section>
 
         <section class="p_02">
-            <div>COVER CHARGE
+            <div><b>COVER CHARGE</b>
                  10,000원 (Free 1 drink)
 
-                 HOURS OF OPERATION
+                 <b>HOURS OF OPERATION</b>
                  19:00 ~ 23:00
 
-                 아티스트 지원 문의
+                <b>아티스트 지원 문의</b>
                  02-744-0015
-                 parangsae.theater@00ground.kr
+                 <a href="#">parangsae.theater@00ground.kr</a>
             </div>
 
             <div class="">
@@ -76,15 +76,15 @@
                 <div>
                     <h4>contact</h4>
                     <p> T : 02-744-0015
-                        parangsae.theater@00ground.kr
+                        <a href="#">parangsae.theater@00ground.kr</a>
                     </p>
                 </div>
 
                 <div>
                     <h4>address</h4>
-                    <p> 서울특별시 종로구
-                        대학로 116 B2F
-                        파랑새극장</p>
+                    <p><a href="#">서울특별시 종로구
+                                   대학로 116 B2F
+                                   파랑새극장</a></p>
                 </div>
 
                 <div>
