--- a/01_about.html
+++ b/01_about.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/01_about.css" rel="stylesheet" type="text/css">
     <script src="js/theater.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
@@ -96,9 +97,13 @@
                     <img src="img/1_img_4.png" alt="">
                 </li>
             </ul>
-            <div><img src="img/1_img_1.png" alt=""></div>
+            <div>
+                <div class="active"><img src="img/1_img_1.png" alt=""></div>
+                <div><img src="img/1_img_2.png" alt=""></div>
+                <div><img src="img/1_img_3.png" alt=""></div>
+                <div><img src="img/1_img_4.png" alt=""></div>
+            </div>
         </section>
-
 
         <section class="c_03">
             <h3>More to read</h3>
@@ -109,6 +114,7 @@
                     <a href="#" class="arrow">→</a>
 
                 </article>
+
                 <article>
                     <h2>IV. PARANGSAE STAGE</h2>
                     <img src="img/ic_ps.png" alt="parangsae stage">
@@ -135,8 +141,8 @@
                 <div>
                     <h4>address</h4>
                     <p><a href="#">서울특별시 종로구
-                                   대학로 116 B2F
-                                   파랑새극장</a></p>
+                            대학로 116 B2F
+                            파랑새극장</a></p>
                 </div>
 
                 <div>
@@ -153,6 +159,4 @@
         <p>공공그라운드 사업자 등록번호: 719-85-00611 대표이사: 배수현 Tel : 02-744-0015</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
