--- a/02_show_01.html
+++ b/02_show_01.html
@@ -78,13 +78,12 @@
 
             <div>때로는 일상의 잔잔함을
                 때로는 여행같은 신선함을
-                노래하는재주소년의
-                단독 어쿠스틱 스테이지를
-                준비했습니다.
+                노래하는재주소년의 단독 어쿠스틱 
+                스테이지를 준비했습니다.
 
                 2019년 연말 투어 콘서트 이후,
-                오랜만에 팬여러분들께 단독
-                콘서트로 인사드려요.
+                오랜만에 팬여러분들께 단독 콘서트로 
+                인사드려요.
             </div>
 
         </section>
@@ -106,10 +105,10 @@
             <h3>ATTENTIONS!</h3>
             <p> • 타 관람객의 공연 관람에 방해가 되지 않도록, 공연 중 이동 및 퇴장은 삼가 주시기 바랍니다.
                 • 아래 물품은 공연장 반입이 금지됩니다.
-                - 타인에게 위험이 될 수 있는 물품(조명탄, 폭죽, 레이저 포인터 등)
-                - 캔, 유리병, 500ml 초과하는 음료나 물이 담긴 페트병
-                - 음식물
-                - 전문가용 카메라 및 녹음 장비
+                    - 타인에게 위험이 될 수 있는 물품(조명탄, 폭죽, 레이저 포인터 등)
+                    - 캔, 유리병, 500ml 초과하는 음료나 물이 담긴 페트병
+                    - 음식물
+                    - 전문가용 카메라 및 녹음 장비
                 • 사전에 공지된 반입 금지 물품을 소지하여 입장이 지연된 경우, 예매하신 입장번호 순으로 입장이 불가하며 이에 대해 주최, 주관사는 책임을 지지 않습니다.
                 • 공연 중 귀중품 보관에 유의해주시기 바랍니다. 본인의 부주의로 인한 분실, 도난 등에 대해 공연 주최, 주관사는 책임을 지지 않습니다.
                 • 공연장 내 주차가 불가하오니, 대중교통을 이용해주시기 바랍니다.
