--- a/03_venue.html
+++ b/03_venue.html
@@ -69,11 +69,9 @@
 
             <div class="process">
                 <div>
-                    <img src="img/3_img_01.png">
-<!--
-                    <video autoplay loop muted controls>
-                        <source src="#" type="video/mp4"> </video>
--->
+                    <video autoplay loop muted>
+                        <source src="img\3_step-2.mp4">
+                    </video>
                 </div>
 
                 <article>
@@ -95,11 +93,9 @@
 
             <div class="process">
                 <div>
-                    <img src="img/3_img_02.png">
-
-                    <!-- <video autoplay loop muted controls>
-                        <source src="#">
-                    </video> -->
+                    <video autoplay loop muted>
+                        <source src="img\3_step-3.mp4">
+                    </video>
                 </div>
 
                 <article>
@@ -122,11 +118,9 @@
 
             <div class="process">
                 <div>
-                    <img src="img/3_img_03.png">
-
-                    <!-- <video autoplay loop muted controls>
-                        <source src="#">
-                    </video> -->
+                    <video autoplay loop muted>
+                        <source src="img\3_step-4.mp4">
+                    </video>
                 </div>
 
                 <article>
@@ -146,11 +140,9 @@
 
             <div class="process">
                 <div>
-                    <img src="img/3_img_04.png">
-
-                    <!-- <video autoplay loop muted controls>
-                        <source src="#">
-                    </video> -->
+                    <video autoplay loop muted>
+                        <source src="img\3_step-5.mp4">
+                    </video>
                 </div>
 
                 <article>
