--- a/04_stage.html
+++ b/04_stage.html
@@ -38,28 +38,37 @@
         <section class="p_01">
             <h2>PARANGSAE RISING ARTIST SHOW</h2>
             <div>PARANGSAE
-                 RISING ARTIST
-                 SHOW
+                RISING ARTIST
+                SHOW
             </div>
             <p>다양한 장르의 신예 뮤지션
-               퍼포먼스를 감상할 수 있는 라운지 바
+                퍼포먼스를 감상할 수 있는 라운지 바
             </p>
-            <img src="img/ic_bb.png" alt="blue bird">
+            <img src="img/ic_b.png" alt="bird_icon">
         </section>
 
         <section class="p_02">
             <div><b>COVER CHARGE</b>
-                 10,000원 (Free 1 drink)
+                10,000원 (Free 1 drink)
 
-                 <b>HOURS OF OPERATION</b>
-                 19:00 ~ 23:00
+                <b>HOURS OF OPERATION</b>
+                19:00 ~ 23:00
 
                 <b>아티스트 지원 문의</b>
-                 02-744-0015
-                 <a href="#">parangsae.theater@00ground.kr</a>
+                02-744-0015
+                <a href="#">parangsae.theater@00ground.kr</a>
             </div>
 
-            <div class="">
+            <div class="schedule">
+                <div>
+                    <a>←</a>
+                    <span>2020 .08</span>
+                    <a>→</a>
+                </div>
+
+                <p>일정이 없습니다.</p>
+
+
 
             </div>
 
@@ -83,8 +92,8 @@
                 <div>
                     <h4>address</h4>
                     <p><a href="#">서울특별시 종로구
-                                   대학로 116 B2F
-                                   파랑새극장</a></p>
+                            대학로 116 B2F
+                            파랑새극장</a></p>
                 </div>
 
                 <div>
@@ -101,6 +110,4 @@
         <p>공공그라운드 사업자 등록번호: 719-85-00611 대표이사: 배수현 Tel : 02-744-0015</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
