0819_index_name_modi

--- a/index.html
+++ b/index.html
@@ -59,27 +59,35 @@
                 <li>
                     <a href="#">
                         <span>II.I</span>
-                        <h3>월간 데이트 休, 정민 현성 for VIP</h3>
+                        <div>
+                            <h3>월간 데이트 休, 정민 현성 for VIP</h3>
+                        </div>
                         <span>2020 .09 .27(일) 11:00</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <span>II.II</span>
-                        <h3>배다해의 어쿠스틱라이브, 溫스테이지</h3>
+                        <div>
+                            <h3>배다해의 어쿠스틱라이브, 溫스테이지</h3>
+                        </div>
                         <span>2020 .09 .27(일) 19:00</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <span>II.III</span>
-                        <h3>재주소년 어쿠스틱라이브, 溫스테이지</h3>
+                        <div>
+                            <h3>재주소년 어쿠스틱라이브, 溫스테이지</h3>
+                        </div>
                         <span>2020 .10 .10(일) 16:00</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <h3> MORE SHOW</h3>
+                        <div>
+                            <h3> MORE SHOW</h3>
+                        </div>
                     </a>
                 </li>
             </ul>
@@ -121,8 +129,8 @@
                 <div>
                     <h4>address</h4>
                     <p><a href="#">서울특별시 종로구
-                                   대학로 116 B2F
-                                   파랑새극장</a></p>
+                            대학로 116 B2F
+                            파랑새극장</a></p>
                 </div>
 
                 <div>
