--- a/02_show_01.html
+++ b/02_show_01.html
@@ -82,8 +82,8 @@
                 스테이지를 준비했습니다.
 
                 2019년 연말 투어 콘서트 이후,
-                오랜만에 팬여러분들께 단독 콘서트로 
-                인사드려요.
+                오랜만에 팬여러분들께 단독 
+                콘서트로 인사드려요.
             </div>
 
         </section>
