--- a/01_about.html
+++ b/01_about.html
@@ -5,34 +5,26 @@
     <meta charset="UTF-8">
     <title>PARANGSAE THEATER</title>
     <link rel="icon" href="img/favi.ico">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <link href="css/01_about.css" rel="stylesheet" type="text/css">
-    <script src="js/theater.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/01_about.js"></script>
 
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">
-            <p>헤리티지 문화공간</p>
-            <a href="#">
-                <img src="img/logo.png" alt="logo">
-            </a>
-            <nav>
-                <a href="#" class="active">I. ABOUT</a>
-                <a href="#">II. SHOW</a>
-                <a href="#">III. VENUE</a>
-                <a href="#">IV. PARANGSAE STAGE</a>
-            </nav>
-        </div>
-    </header>
+    <header class="header"></header>
 
     <main>
 
         <section class="subject">
-            <h1>I. ABOUT<br><span>파랑새</span></h1>
+            <h1>
+                <span class="about"><span>I.</span> <span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></span><br>
+                <p>파랑새</p>
+            </h1>
         </section>
 
         <section class="a_00">
@@ -43,8 +35,10 @@
         <section class="a_01">
             <h2>I.I - THE THEATER</h2>
             <div>
-                <b>특별</b>한 <b>공연</b><br>
-                <b>마법</b>같은 <b>공간</b>
+                <p>
+                    <span><b>특별</b>한 <b>공연</b></span><br>
+                    <span><b>마법</b>같은 <b>공간</b></span>
+                </p>
             </div>
             <p>
                 파랑새극장은 근본적인 헤리티지를 계승하여 문화의 공간 대학로에서<br> 좋은 공연과 즐거움을 모든 이에게 주고자 합니다
@@ -55,6 +49,7 @@
         <section class="a_02">
             <h2>I.II - OUR PAST & NOW</h2>
             <div class="history">
+               <div><img src="img/ic_kor.png"></div>
                 <article>
                     <h3>1984</h3>
                     <img src="img/1_1984.png" alt="parangsae 1984">
@@ -123,40 +118,10 @@
             </div>
         </section>
 
-        <section class="c_04">
-            <div>
-                <a href="#">
-                    <img src="img/logoS.png" alt="logo">
-                </a>
-            </div>
-
-            <article class="contact">
-                <div>
-                    <h4>contact</h4>
-                    <p> T : 02-744-0015
-                        <a href="#">parangsae.theater@00ground.kr</a>
-                    </p>
-                </div>
-
-                <div>
-                    <h4>address</h4>
-                    <p><a href="#">서울특별시 종로구
-                            대학로 116 B2F
-                            파랑새극장</a></p>
-                </div>
-
-                <div>
-                    <h4>on the web</h4>
-                    <a href="#">Instagram</a>
-                    <a href="#">00ground</a>
-                </div>
-            </article>
-        </section>
+        <section class="c_04"></section>
 
     </main>
 
-    <footer>
-        <p>공공그라운드 사업자 등록번호: 719-85-00611 대표이사: 배수현 Tel : 02-744-0015</p>
-    </footer>
+    <footer></footer>
 
 </body></html>
