--- a/02_show.html
+++ b/02_show.html
@@ -8,26 +8,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/02_show.css" rel="stylesheet" type="text/css">
-    <script src="js/theater.js"></script>
-
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/02_show.js"></script>
 
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">
-            <p>헤리티지 문화공간</p>
-            <a href="#">
-                <img src="img/logo.png" alt="logo">
-            </a>
-            <nav>
-                <a href="#">I. ABOUT</a>
-                <a href="#" class="active">II. SHOW</a>
-                <a href="#">III. VENUE</a>
-                <a href="#">IV. PARANGSAE STAGE</a>
-            </nav>
-        </div>
-    </header>
+    <header class="header"></header>
 
     <main>
 
@@ -39,10 +28,11 @@
 
         <section class="s_01">
             <ul>
+<!--
                 <li>
                     <a href="#">
                         <span>II.I</span>
-                        <h3>월간 데이트 休, 정민 현성 for VIP</h3>
+                        <h3>월간 데이트 休, 정민 현성 for VIP  월간 데이트 休, 정민 현성 for VIP</h3>
                     </a>
                 </li>
                 <li>
@@ -54,7 +44,7 @@
                 <li>
                     <a href="#">
                         <span>II.III</span>
-                        <h3>재주소년 어쿠스틱라이브, 溫스테이지</h3>
+                        <h3>재주소년 어쿠스틱라이브, 溫스테이지 </h3>
                     </a>
                 </li>
                 <li>
@@ -63,46 +53,17 @@
                         <h3>월간 데이트 休, 정민 현성 for VIP</h3>
                     </a>
                 </li>
+-->
             </ul>
         </section>
 
         <h2><a href="#">P-ARCHIVE</a></h2>
 
-        <section class="c_04">
-            <div>
-                <a href="#">
-                    <img src="img/logoS.png" alt="logo">
-                </a>
-            </div>
-
-            <article class="contact">
-                <div>
-                    <h4>contact</h4>
-                    <p> T : 02-744-0015
-                        <a href="#">parangsae.theater@00ground.kr</a>
-                    </p>
-                </div>
-
-                <div>
-                    <h4>address</h4>
-                    <p><a href="#">서울특별시 종로구
-                                   대학로 116 B2F
-                                   파랑새극장</a></p>
-                </div>
-
-                <div>
-                    <h4>on the web</h4>
-                    <a href="#">Instagram</a>
-                    <a href="#">00ground</a>
-                </div>
-            </article>
-        </section>
+        <section class="c_04"></section>
 
     </main>
 
-    <footer>
-        <p>공공그라운드 사업자 등록번호: 719-85-00611 대표이사: 배수현 Tel : 02-744-0015</p>
-    </footer>
+    <footer></footer>
 
 </body>
 
