--- a/03_venue.html
+++ b/03_venue.html
@@ -44,14 +44,14 @@
         <section class="subject">
             <div>
                 <h2>THE 4 PARANGSAE STEPS</h2>
-                <h1>III. VENUE</h1>
+                <h1><span>III.</span><span>VENUE</span></h1>
             </div>
         </section>
 
         <aside>
             <h5>INTRODUCTION</h5>
             <ul class="intro">
-                <li class="active">
+                <li>
                     <span>III.I</span>
                     <span>대관신청</span>
                 </li>
@@ -72,8 +72,8 @@
             </ul>
         </aside>
         
-        <span>
-            SCROLL TO EXPLORE
+        <span class="scroll">SCROLL TO EXPLORE
+            <span class="arrow">↓</span>
         </span>
 
         <section class="v_01">
@@ -186,7 +186,7 @@
             </div>
         </section>
 
-        <section class="c_04"></section>
+        <div><section class="c_04"></section></div>
 
     </main>
 
