--- a/04_stage.html
+++ b/04_stage.html
@@ -20,20 +20,20 @@
     <main>
 
         <section class="subject">
-            <h1>IV. PARANSAE
-                STAGE</h1>
+            <h1><span>IV.</span><span>PARANSAE</span>
+                <span>STAGE</span></h1>
         </section>
 
         <section class="p_01">
             <h2>PARANGSAE RISING ARTIST SHOW</h2>
-            <div>PARANGSAE
+            <div class="intro">PARANGSAE
                 RISING ARTIST
                 SHOW
             </div>
             <p>다양한 장르의 신예 뮤지션
                 퍼포먼스를 감상할 수 있는 라운지 바
             </p>
-            <img src="img/ic_b.png" alt="bird_icon">
+            <div class=ic_b><img src="img/ic_b.png" alt="bird_icon"></div>
         </section>
 
         <section class="p_02">
@@ -49,13 +49,15 @@
             </div>
 
             <div class="schedule">
+<!--
                 <div>
                     <a>←</a>
                     <span>2020 .08</span>
                     <a>→</a>
                 </div>
+-->
 
-                <p>일정이 없습니다.</p>
+<!--                <p>일정이 없습니다.</p>-->
 
             </div>
 
