--- a/01_about.html
+++ b/01_about.html
@@ -29,6 +29,7 @@
 
         <section class="a_00">
             <h2>서울특별시 종로구 대학로 116 공공일호</h2>
+            <p class="arrow">↓</p>
             <img src="img/1_1.jpg" alt="parangsae theater">
         </section>
 
@@ -78,7 +79,7 @@
         </section>
         <section class="a_03">
             <h2>I.III - BRAND NEW PARANGSAE</h2>
-            <ul>
+            <ul class="img_btn">
                 <li class="active">
                     <img src="img/1_img_1.png" alt="">
                 </li>
@@ -92,7 +93,7 @@
                     <img src="img/1_img_4.png" alt="">
                 </li>
             </ul>
-            <div>
+            <div class="img_slide">
                 <div class="active"><img src="img/1_img_1.png" alt=""></div>
                 <div><img src="img/1_img_2.png" alt=""></div>
                 <div><img src="img/1_img_3.png" alt=""></div>
