--- a/02_show.html
+++ b/02_show.html
@@ -19,9 +19,8 @@
     <header class="header"></header>
 
     <main>
-
         <section class="subject">
-            <h1>II. SHOW</h1>
+            <h1><span>II.</span><span>SHOW</span></h1>
         </section>
 
         <h2>COMING UP</h2>
