--- a/01_about.html
+++ b/01_about.html
@@ -93,11 +93,12 @@
                     <img src="img/1_img_4.png" alt="">
                 </li>
             </ul>
+            
             <div class="img_slide">
-                <div class="active"><img src="img/1_img_1.png" alt=""></div>
-                <div><img src="img/1_img_2.png" alt=""></div>
-                <div><img src="img/1_img_3.png" alt=""></div>
-                <div><img src="img/1_img_4.png" alt=""></div>
+                <figure class="active"><img src="img/1_img_1.png" alt=""></figure>
+                <figure><img src="img/1_img_2.png" alt=""></figure>
+                <figure><img src="img/1_img_3.png" alt=""></figure>
+                <figure><img src="img/1_img_4.png" alt=""></figure>
             </div>
         </section>
 
