--- a/03_venue.html
+++ b/03_venue.html
@@ -44,7 +44,7 @@
         <section class="subject">
             <div>
                 <h2>THE 4 PARANGSAE STEPS</h2>
-                <h1><span>III.</span><span>VENUE</span></h1>
+                <h1>III.VENUE</h1>
             </div>
         </section>
 
@@ -182,7 +182,7 @@
                 <p>IF YOU WANT
                     MORE INFO
                 </p>
-                <a href="#">CLICK HERE</a>
+                <a href="05_contact.html">CLICK HERE</a>
             </div>
         </section>
 
