--- a/inc_head_foot.html
+++ b/inc_head_foot.html
@@ -6,11 +6,11 @@
         </a>
         <div class="h_rt">   
             <nav>
-                <a href="#">I. ABOUT</a>
-                <a href="#">II. SHOW</a>
-                <a href="#">III. VENUE</a>
-                <a href="#">IV. PARANGSAE STAGE</a>
-                <a href="05_contact.html#">V. CONTACT</a>
+                <a href="01_about.html">I. ABOUT</a>
+                <a href="02_show.html">II. SHOW</a>
+                <a href="03_venue.html">III. VENUE</a>
+                <a href="04_stage.html">IV. PARANGSAE STAGE</a>
+                <a href="05_contact.html">V. CONTACT</a>
             </nav>
             <div class="menu-trigger">
                <span></span>
