--- a/01_about.html
+++ b/01_about.html
@@ -22,7 +22,7 @@
 
         <section class="subject">
             <h1>
-                <span class="about"><span>I.</span> <span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></span><br>
+                <span class="about">I.ABOUT</span>
                 <p>파랑새</p>
             </h1>
         </section>
