--- a/03_venue.html
+++ b/03_venue.html
@@ -17,27 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">
-        <p>헤리티지 문화공간</p>
-        <a href="#">
-            <img src="img/logoW.png" alt="logo">
-        </a>
-        <div class="h_rt">   
-            <nav>
-                <a href="#" class="active">I. ABOUT</a>
-                <a href="#">II. SHOW</a>
-                <a href="#">III. VENUE</a>
-                <a href="#">IV. PARANGSAE STAGE</a>
-                <a href="#">V. CONTACT</a>
-            </nav>
-            <div class="menu-trigger">
-               <span></span>
-               <span></span>
-            </div>
-        </div>  
-    </div>
-    </header>
+    <header class="header"></header>
 
     <main>
 
