--- a/03_venue.html
+++ b/03_venue.html
@@ -162,7 +162,7 @@
                 <p>IF YOU WANT
                     MORE INFO
                 </p>
-                <a href="05_contact.html">CLICK HERE</a>
+                <a href="05_contact.html" data-num = "4">CLICK HERE</a>
             </div>
         </section>
 
