--- a/03_venue.html
+++ b/03_venue.html
@@ -166,7 +166,7 @@
             </div>
         </section>
 
-        <div><section class="c_04"></section></div>
+        <section class="c_04"></section>
 
     </main>
 
