--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p><span>문화의</span> <span>전초기지 대학로</span></p>
                 <p><span>그리고</span> <span><b>파랑새 극장</b></span></p>
             </div>
-            <a href="#">READ ALL ABOUT IT</a>
+            <a href="01_about.html">READ ALL ABOUT IT</a>
         </section>
 
 
@@ -111,27 +111,27 @@
                 <article>
                     <h2>III. VENUE</h2>
                     <img src="img/ic_venue.png" alt="venue">
-                    <a href="#" class="arrow">→</a>
+                    <a href="03_venue.html" class="arrow">→</a>
 
                 </article>
                 <article>
                     <h2>IV. PARANGSAE STAGE</h2>
                     <img src="img/ic_ps.png" alt="parangsae stage">
-                    <a href="#" class="arrow">→</a>
+                    <a href="04_stage.html" class="arrow">→</a>
                 </article>
             </div>
         </section>
 
         <section class="c_04">
             <div>
-                <a href="#">
+                <a href="index.html">
                     <img src="img/logoS.png" alt="logo">
                 </a>
             </div>
 
             <article class="contact">
                 <div>
-                    <h4><a href="#">V. CONTACT</a></h4>
+                    <h4><a href="05_contact.html">V. CONTACT</a></h4>
                     <p> T : 02-744-0015
                         <a href="#">parangsae.theater@00ground.kr</a>
                     </p>
